#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-26
2016-01-22 Mikhail S. Dubrovin
- NDArrProducerStore::Create 
	- add suppor for QUARTZ4A150, RAYONIX, FCCD as Camera
	- do not throw exception if dettype is unknown, return NULL pointer
- DetectorAccess.cpp - in methods like data_uint16_2 return empty ndarray if m_nda_prod == NULL
	
Tag: V00-03-25
2016-01-21 Mikhail S. Dubrovin
- AreaDetector.py - in status_as_mask do not re-shape cspad2x2 arr, it is already (2,185,388) from status()

Tag: V00-03-24
2016-01-20 Mikhail S. Dubrovin
- AreaDetector.py - in calib change order of corrections; 1) common mode, 2) mask from status (PSAS-139) 
	
Tag: V00-03-23
2016-01-20 Mikhail S. Dubrovin
- AreaDetector.py - fix return from status_as_mask, ex_all_dets.py - update example for det.mask
	
Tag: V00-03-22
2016-01-15 TJ Lane
- Fix issue where aliases were not correctly mapped for non-AreaDetectors

Tag: V00-03-21
2016-01-07 TJ Lane
- Fix typo

Tag: V00-03-20
2016-01-07 TJ Lane
- Added ConfigDataDetector type

Tag: V00-03-19
2016-01-07 Mikhail S. Dubrovin
- PyDetectorAccess.py - fix issue with initialization of self.mbits in constructor (PSAS-139)

Tag: V00-03-18
2016-01-06 Christopher O'Grady
- Refactor the detector factory so people can query the detector
  type for a particular source name.  Add IpimbDetector to DetectorTypes.py
  (for non-bld detectors)

Tag: V00-03-17
2016-01-05 Christopher O'Grady
- Fix EpicsDetector import

Tag: V00-03-16
2015-12-18 TJ Lane
- Added IpimbDetector
- Added explicit list of BldInfo detector types
- modified DdlDetector to have .get() instead of __call__()

Tag: V00-03-15
2015-12-18 Mikhail S. Dubrovin